Fixed page jumping when header transitioned into fixed mode

--- a/src/scss/parts/shared/header-templates/_header-style-1.scss
+++ b/src/scss/parts/shared/header-templates/_header-style-1.scss
@@ -110,24 +110,6 @@ header#header-style-1 {
 
   }
 
-  &.is-scrolled {
-    &:not(.include-header-background) {
-      background-color: $paleBlue-80;
-    }
-  }
-
-  &.is-fixed {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-
-    .torque-header-content-wrapper {
-      @include useHeaderHeight(height, false, true); // NB last param for isFixed
-      @include useHeaderPadding(true); // NB last param for isFixed
-    }
-  }
-
   // notification bar
   &.include-notification-bar {
 
@@ -270,6 +252,30 @@ header#header-style-1 {
         transition: 0.2s;
 
         z-index: -2;
+      }
+    }
+  }
+}
+
+body {
+  &.is-scrolled {
+    &:not(.include-header-background) {
+      header#header-style-1 {
+        background-color: $paleBlue-80;
+      }
+    }
+  }
+
+  &.is-fixed {
+    header#header-style-1 {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+  
+      .torque-header-content-wrapper {
+        @include useHeaderHeight(height, false, true); // NB last param for isFixed
+        @include useHeaderPadding(true); // NB last param for isFixed
       }
     }
   }
